--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,11 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+body {
+    font-family: Lato, sans-serif;
+    font-weight: 300;
+}
