--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,11 @@ h1, h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position: relative; /* parent element relative to child element*/
+}
+#cover-text, #cover-text h2 /*over rides default setting of earlier h2*/{
+    color: #fff;
 }
 /* create the level fo zoom for hero image*/
 @keyframes hero-zoom {
@@ -67,4 +72,18 @@ h1, h2 {
     to{
         transform: scale(1.1);
     }
+}
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    height: 200px;
+    width: 300px;
+    padding-top: 40px;
+    padding-left: 10px;
+    background-color: rgba(241, 109, 107, .7);
+    bottom: 30px;
+    right: 150px;
+    position: absolute;
 }
