--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,6 @@ h1, h2 {
 #center-about {
     width: 33%;
     margin: 0 auto;
-    background-color: green;
 }
 hr {
     border-top: 1px solid #3a3a3a;
@@ -131,4 +130,24 @@ hr {
 }
 .right-about-heading p {
     text-align: right;
+}
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #cccccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+#circle-cover-bg {
+    background: url('../images/ethos-center-image.jpg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
