--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,4 +235,24 @@ hr {
         margin-bottom: 20px;
         line-height: 25px;
     }
+    #cover-text {
+        left: 0;
+    }
+    #club-ethos {
+        width: 90%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+    .left-about-heading, .right-about-heading {
+        width: inherit;
+    }
+    .left-about-heading, .right-about-heading h2 {
+        width: 100%;
+        text-align: center;
+    }
+    .left-about-heading, .right-about-heading p {
+        text-align: center;
+        padding: 0 20px;
+    }
+    
 }
