--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,12 @@ footer {
     float: left;
     padding: 0;
 }
+#times > div {
+    width: 100%;
+    clear: both;
+    height: 150px;
+    padding: 0;
+}
 hr {
     display: none;
 }
@@ -254,5 +260,6 @@ hr {
         text-align: center;
         padding: 0 20px;
     }
-    
+
 }
+
