--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,14 @@ hr {
         text-align: center;
         padding: 0 20px;
     }
+    #photos {
+        column-count: 3;
+    }
+}
 
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
 }
 
